...
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/textTitleColor"
                    android:text="@string/today"/>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/weekBtn"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:elevation="5dp"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="@color/accentSkeleton"
                android:layout_marginEnd="20dp"
...
                    android:layout_gravity="center"
                    android:textColor="@color/textTitleColor"
                    android:text="@string/month"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/popularPeopleRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/popular_articles_list_item">

...
