<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="15dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/articleImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        app:srcCompat="@android:drawable/ic_menu_gallery" />
    <TextView
        android:id="@+id/articleTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="title"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:maxLines="1"
        android:ellipsize="end"
        android:textColor="@color/textTitleColor"/>
    <TextView
        android:id="@+id/articleDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="description"
        android:maxLines="2"
        android:ellipsize="end"
        android:textStyle="bold"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/articleByline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="by: test"
        android:textStyle="italic"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:maxLines="1"
        android:ellipsize="end"
        android:textColor="@color/textTitleColor"/>

</LinearLayout>